--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
+html,
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
-html {
-  scroll-behavior: smooth;
-}
 body {
-  font-family: "Bitter", serif;
+  font-family: "Inter", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 section {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
 a {
   color: inherit;
@@ -33,15 +33,49 @@ a {
   margin: 0 auto;
 }
 .banner-area {
-  width: 100%;
-  height: 100%;
-  background-image: url("./assets/images/donation5.jpg");
+  background-image: linear-gradient(
+      360deg,
+      #121212 0%,
+      rgba(18, 18, 18, 0) 100%
+    ),
+    url("./assets/images/donation5.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
+.banner-area .container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
 .banner-content {
+  max-width: 826px;
+  text-align: center;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-#banner-area .btn {
+.banner-content h1 {
+  font-size: 65px;
+  font-weight: 700;
+  font-family: "Inter";
+  line-height: 79px;
 }
+.banner-content p {
+  font-size: 18px;
+  font-family: "Poppins";
+  line-height: 28px;
+  width: 691px;
+  padding-top: 24px;
+}
+.banner-content .btn {
+  background: teal;
+  width: 160px;
+  height: 56px;
+  padding: 16px 12px 16px 12px;
+  margin-top: 24px;
+}
+
 /* Banner area end */
