--- a/style.css
+++ b/style.css
@@ -16,6 +16,16 @@ a {
   color: inherit;
   text-decoration: none;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+  font-family: "Arima";
+}
 .container {
   max-width: 1080px;
   margin: 0 auto;
@@ -78,7 +88,6 @@ a {
 .banner-content h1 {
   font-size: 65px;
   font-weight: 700;
-  font-family: "Arima";
   line-height: 79px;
 }
 .banner-content p {
@@ -86,7 +95,7 @@ a {
   font-family: "Oswald";
   line-height: 28px;
   width: 691px;
-  padding-top: 16px;
+  font-weight: 400;
 }
 .banner-content .btn {
   background: teal;
