--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-html,
-* {
+*,
+html {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -8,8 +8,8 @@ body {
   scroll-behavior: smooth;
 }
 section {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
 }
 a {
@@ -28,11 +28,15 @@ h6 {
 }
 .container {
   max-width: 1080px;
+  height: 100%;
   margin: 0 auto;
   overflow: hidden;
 }
 .w-full {
   width: 100%;
+}
+.main-width {
+  width: 1440px;
 }
 .h-full {
   height: 100%;
@@ -51,21 +55,34 @@ h6 {
 .justify-center {
   justify-content: center;
 }
+.justify-between {
+  justify-content: space-between;
+}
 .justify-end {
   justify-content: flex-end;
 }
 .text-center {
   text-align: center;
 }
+.overflow-hidden {
+  overflow: hidden;
+}
+.realative {
+  position: relative;
+}
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
 /* global css end */
 
 /* Banner area start */
 #banner-area {
-  width: 1440px;
   height: 669px;
-  overflow: hidden;
-  position: relative;
-  margin: 0 auto;
 }
 .banner-area {
   background-image: linear-gradient(
@@ -98,7 +115,7 @@ h6 {
   font-weight: 400;
 }
 .banner-content .btn {
-  background: teal;
+  background: #ff5959;
   width: 160px;
   height: 56px;
   padding: 16px 12px 16px 12px;
@@ -109,5 +126,58 @@ h6 {
   -ms-border-radius: 5p;
   -o-border-radius: 5p;
 }
-
 /* Banner area end */
+
+/* donation-value area start */
+#donation-value {
+  height: 450px;
+}
+.donation-value-header {
+  width: 691px;
+}
+.donation-value-header h1 {
+  font-size: 45px;
+  line-height: 54px;
+  font-weight: bold;
+  width: 304px;
+  height: 54px;
+}
+.donation-value-header p {
+  width: 100%;
+  height: 56px;
+  color: #707070;
+  padding-top: 5px;
+}
+.donation-value-body {
+  width: 765px;
+  height: 125px;
+}
+.donation-value-card {
+  width: 136px;
+  height: 123px;
+  font-size: 30px;
+  line-height: 36px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.donation-value-card.active {
+  border: 2px solid #ff5959;
+  background-color: #ffeeee;
+  color: #ff5959;
+}
+.donation-value-card p {
+  font-weight: bold;
+  color: #707070;
+}
+.donation-value-footer {
+  width: 765px;
+  height: 100px;
+}
+.donation-value-footer input {
+  border: none;
+  outline: none;
+  border-bottom: 1px solid #dadada;
+}
+/* donation-value area ends */
