--- a/style.css
+++ b/style.css
@@ -26,6 +26,9 @@ h6 {
   padding: 0;
   font-family: "Arima";
 }
+p {
+  font-family: "Oswald";
+}
 .container {
   max-width: 1080px;
   height: 100%;
@@ -70,6 +73,9 @@ h6 {
 .realative {
   position: relative;
 }
+.absolute {
+  position: absolute;
+}
 .my-auto {
   margin-top: auto;
   margin-bottom: auto;
@@ -77,6 +83,20 @@ h6 {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+.btn {
+  background: #ff5959;
+  width: 160px;
+  height: 56px;
+  padding: 16px 12px 16px 12px;
+  margin-top: 24px;
+  text-align: center;
+  color: white;
+  border-radius: 5px;
+  -webkit-border-radius: 5p;
+  -moz-border-radius: 5p;
+  -ms-border-radius: 5p;
+  -o-border-radius: 5p;
 }
 /* global css end */
 
@@ -109,28 +129,15 @@ h6 {
 }
 .banner-content p {
   font-size: 18px;
-  font-family: "Oswald";
   line-height: 28px;
   width: 691px;
   font-weight: 400;
-}
-.banner-content .btn {
-  background: #ff5959;
-  width: 160px;
-  height: 56px;
-  padding: 16px 12px 16px 12px;
-  margin-top: 24px;
-  border-radius: 5px;
-  -webkit-border-radius: 5p;
-  -moz-border-radius: 5p;
-  -ms-border-radius: 5p;
-  -o-border-radius: 5p;
 }
 /* Banner area end */
 
 /* donation-value area start */
 #donation-value {
-  height: 450px;
+  height: 600px;
 }
 .donation-value-header {
   width: 691px;
@@ -151,6 +158,7 @@ h6 {
 .donation-value-body {
   width: 765px;
   height: 125px;
+  padding-top: 50px;
 }
 .donation-value-card {
   width: 136px;
@@ -161,6 +169,12 @@ h6 {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #fafafa;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
 }
 .donation-value-card.active {
   border: 2px solid #ff5959;
@@ -173,11 +187,23 @@ h6 {
 }
 .donation-value-footer {
   width: 765px;
-  height: 100px;
+  padding-top: 50px;
 }
-.donation-value-footer input {
+.donation-value-input {
+  border-bottom: 1px solid #dadada;
+}
+.donation-value-input input {
   border: none;
   outline: none;
-  border-bottom: 1px solid #dadada;
+}
+.donation-value-input p {
+  width: 192px;
+  height: 28px;
+  position: relative;
+  text-align: center;
+  color: #b3b3b3;
+  font-size: 18px;
+  line-height: 28px;
+  font-weight: 400;
 }
 /* donation-value area ends */
