--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ a {
   color: inherit;
   text-decoration: none;
 }
+img {
+  width: 100%;
+  height: 100;
+}
 h1,
 h2,
 h3,
@@ -33,7 +37,6 @@ p {
   max-width: 1080px;
   height: 100%;
   margin: 0 auto;
-  overflow: hidden;
 }
 .w-full {
   width: 100%;
@@ -92,6 +95,9 @@ p {
   margin-top: 24px;
   text-align: center;
   color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border-radius: 5px;
   -webkit-border-radius: 5p;
   -moz-border-radius: 5p;
@@ -154,11 +160,13 @@ p {
   height: 56px;
   color: #707070;
   padding-top: 5px;
+  font-size: 18px;
+  font-weight: 400;
 }
 .donation-value-body {
   width: 765px;
   height: 125px;
-  padding-top: 50px;
+  margin-top: 60px;
 }
 .donation-value-card {
   width: 136px;
@@ -187,7 +195,7 @@ p {
 }
 .donation-value-footer {
   width: 765px;
-  padding-top: 50px;
+  margin-top: 60px;
 }
 .donation-value-input {
   border-bottom: 1px solid #dadada;
@@ -207,3 +215,78 @@ p {
   font-weight: 400;
 }
 /* donation-value area ends */
+
+/* our donation plan area start */
+#our-donation-plan {
+  padding: 60px 0px;
+  height: 550px;
+}
+.our-donation-plan-header {
+  width: 691px;
+}
+.our-donation-plan-header h1 {
+  font-size: 45px;
+  line-height: 54px;
+  font-weight: bold;
+  width: 357px;
+  height: 54px;
+}
+.our-donation-plan-header p {
+  width: 100%;
+  height: 56px;
+  color: #707070;
+  padding-top: 5px;
+  font-size: 18px;
+  font-weight: 400;
+}
+.our-donation-plan-body {
+  margin-top: 50px;
+}
+.our-donation-plan-card {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  justify-content: space-evenly;
+  width: 360px;
+  height: 352px;
+  margin: 20px;
+  padding: 20px;
+  box-shadow: 1px 3px 15px 2px #939393;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+.our-donation-plan-card:nth-child(1) {
+  background-color: #4f9da6;
+}
+.our-donation-plan-card:nth-child(2) {
+  background-color: #ff5959;
+}
+.our-donation-plan-card:nth-child(3) {
+  background-color: #cedfb2;
+}
+
+.our-donation-plan-card-icon {
+  width: 53px;
+  height: 53px;
+  margin-top: 10px;
+}
+.our-donation-plan-card-title {
+  max-width: 250px;
+  height: 36px;
+}
+.our-donation-plan-card-title p {
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 36px;
+}
+.our-donation-plan-card-info {
+  height: 101px;
+}
+.our-donation-plan-card-info p {
+  font-size: 16px;
+  line-height: 24px;
+}
+/* our donation plan area ends */
