--- a/style.css
+++ b/style.css
@@ -47,6 +47,9 @@ p {
 .h-full {
   height: 100%;
 }
+.flex {
+  display: flex;
+}
 .row {
   display: flex;
   flex-direction: row;
@@ -259,10 +262,10 @@ p {
   -o-border-radius: 5px;
 }
 .our-donation-plan-card:nth-child(1) {
-  background-color: #4f9da6;
+  background-color: rgba(79, 157, 166, 0.1);
 }
 .our-donation-plan-card:nth-child(2) {
-  background-color: #ff5959;
+  background-color: rgba(255, 89, 89, 0.1);
 }
 .our-donation-plan-card:nth-child(3) {
   background-color: #cedfb2;
@@ -277,10 +280,11 @@ p {
   max-width: 250px;
   height: 36px;
 }
-.our-donation-plan-card-title p {
+.our-donation-plan-card-title h3 {
   font-size: 24px;
   font-weight: 600;
   line-height: 36px;
+  color: #121212;
 }
 .our-donation-plan-card-info {
   height: 101px;
@@ -288,5 +292,58 @@ p {
 .our-donation-plan-card-info p {
   font-size: 16px;
   line-height: 24px;
+  color: #707070;
 }
 /* our donation plan area ends */
+
+/* get updates area start */
+#get-updates {
+  max-height: 550px;
+  padding: 60px 0px;
+}
+.get-updates-header {
+  width: 691px;
+}
+.get-updates-header h1 {
+  font-size: 45px;
+  line-height: 54px;
+  font-weight: bold;
+  width: 357px;
+  height: 54px;
+}
+.get-updates-header p {
+  width: 100%;
+  height: 56px;
+  color: #707070;
+  padding-top: 5px;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.get-updates-card {
+  width: 809px;
+  height: 200px;
+  background: #dbe8eb;
+  margin-top: 50px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+.get-updates-input-wrapper {
+  width: 432px;
+  height: 48px;
+}
+.get-updates-input-wrapper form input {
+  border: none;
+  outline: none;
+  padding: 20px;
+}
+.get-updates-input-wrapper form button {
+  border: none;
+  right: 0;
+  margin: 0;
+  height: 100%;
+}
+/* get updates area ends */
