--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ html {
 }
 body {
   scroll-behavior: smooth;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 section {
   width: 100%;
@@ -18,7 +20,7 @@ a {
 }
 img {
   width: 100%;
-  height: 100;
+  height: 100%;
 }
 h1,
 h2,
@@ -57,6 +59,10 @@ p {
 .col {
   display: flex;
   flex-direction: column;
+}
+.col-reverse {
+  display: flex;
+  flex-direction: column-reverse;
 }
 .items-center {
   align-items: center;
@@ -295,6 +301,39 @@ p {
   color: #707070;
 }
 /* our donation plan area ends */
+
+/* live depends on area start */
+#live-depends {
+}
+.live-depends {
+  padding: 50px 0px;
+}
+.live-depends-header {
+  width: 691px;
+  padding-top: 50px;
+}
+.live-depends-header h1 {
+  font-size: 45px;
+  line-height: 54px;
+  font-weight: bold;
+  width: 550px;
+  height: 54px;
+}
+.live-depends-header p {
+  width: 100%;
+  height: 56px;
+  color: #707070;
+  margin-top: 50px;
+  font-size: 18px;
+  font-weight: 400;
+}
+.live-depends-image {
+  width: 670px;
+  height: 450px;
+  box-shadow: 3px 2px 7px 2px #686868;
+  border-radius: 30px;
+}
+/* live depends on area ends */
 
 /* get updates area start */
 #get-updates {
