--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ body {
   scroll-behavior: smooth;
   max-width: 1440px;
   margin: 0 auto;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 section {
   width: 100%;
